<resources>
    <string name="app_name">School</string>

    <string name="title_calendar">Calendar</string>
    <string name="title_notifications">Notice</string>
    <string name="title_home">Home</string>
    <string name="title_digital_class">Digital Class</string>
    <string name="title_dashboard">Dashboard</string>

    <string name="driver">Driver</string>
    <string name="teacher">Teacher</string>
    <string name="parent">Parent</string>
    <string name="login_as">Login as %1$s</string>

    <string name="or">OR</string>

    <string name="calendar">calendar</string>
    <string name="notification">notification</string>
    <string name="title_activity_notification">NotificationActivity</string>

    <string name="action_settings">Settings</string>

    <string name="tab_text_general">General</string>
    <string name="tab_text_important">Teacher</string>

    <!-- Image content Descriptions-->
    <string name="close">Close</string>
    <string name="dashboardItemIconDesc">dashboardItemIcon</string>
    <string name="profile">profile</string>
    <string name="title_activity_maps">Map</string>

    <!-- message String-->
    <string name="no_data_message">no data found</string>
    <string name="no_internet_message">No Internet Connection!</string>

    <string name="title_activity_teacher">"Teacher "</string>

    <!-- Notification Channel details -->
    <string name="channel_name">@string/app_name</string>
    <string name="channel_description">Notification of the schools appears here</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="anonymous">Anonymous</string>
    <string name="submit">Submit</string>
    <string name="re_submit">Re-Submit</string>

    <string name="add_student">Add new Student</string>

    <string name="choose_section">Choose Section</string>
    <string name="choose_class">Choose Class</string>

    <string name="absent">Absent</string>
    <string name="present">Present</string>


    <string-array name="defaultSpinnerData">
        <item>None</item>
    </string-array>

    <string name="previous">Go to previous</string>
    <string name="next">Go to next</string>


    <!-- Youtube API KEY -->
    <string name="YOUTUBE_DEVELOPER_KEY">AIzaSyANC3HvSFAPPqbl5t-U_VDwESY_hcf1otU</string>
    <string name="video_component_tag">youtube_video_frame</string>

    <string name="appbar_translate_scale_behavior" translatable="false">com.swipecrafts.utils.behaviour.AppBarTranslateScaleBehavior</string>


    <!-- Dialog values -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_retry">RETRY</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading…</string>

    <string name="error_dialog_title">Sorry!</string>
    <string name="download_error_title">Download Error!</string>
    <string name="logout_dialog_title">Logout!</string>

    <string name="dashboard_login_message">You are not authorized! \n Please login.</string>
    <string name="logout_message">Your are logout successfully!</string>

    <string name="unexpected_error">sorry an unexpected error occurred!</string>

    <string name="google_map_api_key">AIzaSyBLvD4i1B53GKsPWCWiZt0oY5pVN1dxlhU</string>


    <string name="splash_error_message">
        Could not download the necessary data. Please check your Internet Connection and try again.
    </string>
    <string name="home_no_data_message">school has not published any information yet.</string>
    <string name="icon_description">Icon Description</string>
    <string name="parent_availability">Parent availability :</string>
    <string name="required">Required</string>
    <string name="demo_time">2nd April 2018</string>
    <string name="link">Link:</string>
    <string name="change">Change</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="now_playing">Now Playing</string>
    <string name="user_agent">user agent</string>
    <string name="login">Login</string>


    <string name="play_audio">Play Audio</string>
    <string name="pause_audio">Pause Audio</string>

    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">live_directions</string>
    <string name="firebase_email" translatable="false">livebus@gmail.com</string>
    <string name="firebase_password" translatable="false">password</string>
    <string name="live_bus_map_path">live_directions/school/%1$s/driver/%2$s/</string>
</resources>
