<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/passwordResetToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="change your password" >

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/oldPasswordInpLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary"
        app:hintTextAppearance="@style/HintText"
        app:errorTextAppearance="@style/ErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_login">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtOldPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newPasswordInpLyt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary"
        app:hintTextAppearance="@style/HintText"
        app:errorTextAppearance="@style/ErrorText"
        app:layout_constraintEnd_toEndOf="@+id/oldPasswordInpLyt"
        app:layout_constraintStart_toStartOf="@+id/oldPasswordInpLyt"
        app:layout_constraintTop_toBottomOf="@+id/oldPasswordInpLyt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confPasswordInpLyt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:errorTextAppearance="@style/ErrorText"
        app:hintTextAppearance="@style/HintText"
        app:layout_constraintEnd_toEndOf="@+id/newPasswordInpLyt"
        app:layout_constraintStart_toStartOf="@+id/newPasswordInpLyt"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordInpLyt"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnChangePassword"
        style="@style/ColorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="@+id/confPasswordInpLyt"
        app:layout_constraintTop_toBottomOf="@+id/confPasswordInpLyt" />

    <FrameLayout
        android:id="@+id/progressContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorTransparentBlack70"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_login">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorTransparentWhite"
            android:indeterminateDrawable="@drawable/progressbar"
            android:padding="5dp"
            android:progressTint="@color/colorBlack" />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>