<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/loginToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Login" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
            android:id="@+id/school_img_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/school_splash_icon"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userNameTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="Username"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:fontFamily="@font/roboto_regular"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:layout_marginBottom="10dp"/>

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/login_components"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/login_as_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_alignParentTop="true"
                    android:background="@color/colorPrimaryButton"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_parents"
                    android:drawableTint="@color/colorBlack"
                    android:focusable="true"
                    android:fontFamily="@font/roboto_regular"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/parent"
                    tools:targetApi="m" />

                <LinearLayout
                    android:id="@+id/divider_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_as_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp"
                        android:text="@string/or" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary" />

                </LinearLayout>

                <Button
                    android:id="@+id/login_as_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider_view"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorSecondaryButton"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_teacher"
                    android:drawableTint="@color/colorBlack"
                    android:focusable="true"
                    android:fontFamily="@font/roboto_regular"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/teacher"
                    tools:targetApi="m" />


                <Button
                    android:id="@+id/login_as_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_as_teacher"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorSecondaryButton"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_driver"
                    android:drawableTint="@color/colorBlack"
                    android:focusable="true"
                    android:fontFamily="@font/roboto_regular"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/driver"
                    tools:targetApi="m" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
